--- a/anabeesh/src/main/res/values/colors.xml
+++ b/anabeesh/src/main/res/values/colors.xml
@@ -1,6 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <!--Main-->
+    <color name="colorPrimary">#FF525252</color>
+    <color name="colorPrimaryDark">#FF525252</color>
+    <color name="colorAccent">#019688</color>
+    <color name="colorLayoutBackground">#f8f8f8</color>
+    <color name="colorError">#f54f43</color>
+    <color name="colorSuccess">#57b45b</color>
+    <color name="colorWarning">#feeb46</color>
+
+    <!--Landing page-->
+    <color name="colorLandingPageLayoutBackground">#e5e5e5</color>
+    <!--ImageView-->
+    <color name="colorLandingPageIcon">#ffffff</color>
+    <!--TextView-->
+    <color name="colorLandingPageTextViewTitle">#FF525252</color>
+    <color name="colorLandingPageTextViewBody">#FF525252</color>
+    <!--Button-->
+    <color name="colorLandingPageButtonFacebook">#FF4268B3</color>
+    <color name="colorLandingPageButtonGooglePlus">#FFBF3020</color>
+    <color name="colorLandingPageButtonSignUp">#FF696969</color>
+    <color name="colorLandingPageButtonLogin">#FFFFFF</color>
+    <color name="colorLandingPageButtonText">#FFFFFF</color>
+    <color name="colorLandingPageButtonRipple">#FFFFFF</color>
+
+    <!--Login-->
+    <color name="colorLoginToolbar">#FF525252</color>
+    <color name="colorLoginLayoutBackground">#e5e5e5</color>
+    <!--TextView-->
+    <color name="colorLoginTextViewTitle">#FF525252</color>
+    <color name="colorLoginTextViewBody">#FF525252</color>
+    <color name="colorLoginTextClickable">#FF1C77FF</color>
+    <!--EditText-->
+    <color name="colorLoginEditTextBackground">#ffffff</color>
+    <color name="colorLoginEditTextBody">#FF525252</color>
+    <color name="colorLoginEditTextHint">#FF525252</color>
+    <!--Button-->
+    <color name="colorLoginButton">#FF696969</color>
+    <color name="colorLoginButtonDisabled">#FFABABAB</color>
+    <color name="colorLoginButtonText">#FFFFFF</color>
+    <color name="colorLoginButtonRipple">#FFFFFF</color>
+
+    <!--Registration-->
+    <color name="colorRegisterLayoutBackground">#e5e5e5</color>
+    <!--TextView-->
+    <color name="colorRegisterTextViewLabel">#FF525252</color>
+    <color name="colorRegisterTextViewBody">#FF525252</color>
+    <color name="colorRegisterTextClickable">#FF1C77FF</color>
+    <!--EditText-->
+    <color name="colorRegisterEditTextBackground">#ffffff</color>
+    <color name="colorRegisterEditTextBody">#FF525252</color>
+    <color name="colorRegisterEditTextIcon">#FF525252</color>
+    <color name="colorRegisterEditTextHint">#FF525252</color>
+    <!--Button-->
+    <color name="colorRegisterButton">#FF696969</color>
+    <color name="colorRegisterButtonDisabled">#FFABABAB</color>
+    <color name="colorRegisterButtonText">#FFFFFF</color>
+    <color name="colorRegisterButtonRipple">#FFFFFF</color>
+
+    <!--Home-->
+    <color name="colorHomeLayoutBackground">#f8f8f8</color>
+    <color name="colorHomeDivider">#FFABABAB</color>
+    <!--TextView-->
+    <color name="colorHomeTextViewTitle">#FF525252</color>
+    <color name="colorHomeTextViewPrimaryText">#FF525252</color>
+    <color name="colorHomeTextViewSecondaryText">#FF707070</color>
+    <color name="colorHomeQuestionTag">#4C696969</color>
+    <!--EditText-->
+    <color name="colorHomeEditTextBackground">#ffffff</color>
+    <color name="colorHomeEditTextText">#FF525252</color>
+    <color name="colorHomeEditTextIcon">#FF525252</color>
+    <color name="colorHomeEditTextHint">#FFABABAB</color>
 </resources>
