--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!--SnackBar-->
+    <color name="colorSnackBarHeader">#757bc9</color>
+    <color name="colorSnackBarBody">#FFFFFF</color>
+    <color name="colorSnackBarText">#757bc9</color>
 </resources>
