--- a/anabeesh/src/main/res/values/colors.xml
+++ b/anabeesh/src/main/res/values/colors.xml
@@ -1,74 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--Main-->
-    <color name="colorPrimary">#FF525252</color>
-    <color name="colorPrimaryDark">#FF525252</color>
-    <color name="colorAccent">#019688</color>
-    <color name="colorLayoutBackground">#f8f8f8</color>
-    <color name="colorError">#f54f43</color>
-    <color name="colorSuccess">#57b45b</color>
-    <color name="colorWarning">#feeb46</color>
+    <color name="colorPrimary">#757ce4</color>
+    <color name="colorPrimaryDark">#757ce4</color>
+    <color name="colorAccent">#00d2b9</color>
 
-    <!--Landing page-->
-    <color name="colorLandingPageLayoutBackground">#e5e5e5</color>
-    <!--ImageView-->
-    <color name="colorLandingPageIcon">#ffffff</color>
-    <!--TextView-->
-    <color name="colorLandingPageTextViewTitle">#FF525252</color>
-    <color name="colorLandingPageTextViewBody">#FF525252</color>
-    <!--Button-->
-    <color name="colorLandingPageButtonFacebook">#FF4268B3</color>
-    <color name="colorLandingPageButtonGooglePlus">#FFBF3020</color>
-    <color name="colorLandingPageButtonSignUp">#FF696969</color>
-    <color name="colorLandingPageButtonLogin">#FFFFFF</color>
-    <color name="colorLandingPageButtonText">#FFFFFF</color>
-    <color name="colorLandingPageButtonRipple">#FFFFFF</color>
-
-    <!--Login-->
-    <color name="colorLoginToolbar">#FF525252</color>
-    <color name="colorLoginLayoutBackground">#e5e5e5</color>
-    <!--TextView-->
-    <color name="colorLoginTextViewTitle">#FF525252</color>
-    <color name="colorLoginTextViewBody">#FF525252</color>
-    <color name="colorLoginTextClickable">#FF1C77FF</color>
-    <!--EditText-->
-    <color name="colorLoginEditTextBackground">#ffffff</color>
-    <color name="colorLoginEditTextBody">#FF525252</color>
-    <color name="colorLoginEditTextHint">#FF525252</color>
-    <!--Button-->
-    <color name="colorLoginButton">#FF696969</color>
-    <color name="colorLoginButtonDisabled">#FFABABAB</color>
-    <color name="colorLoginButtonText">#FFFFFF</color>
-    <color name="colorLoginButtonRipple">#FFFFFF</color>
+    <!--Splash-->
+    <color name="colorSplashLayoutBackground">#e4e7ee</color>
 
     <!--Registration-->
-    <color name="colorRegisterLayoutBackground">#e5e5e5</color>
+    <color name="colorPrimaryRegistration">#e4e7ee</color>
+    <color name="colorPrimaryDarkRegistration">#e4e7ee</color>
+    <color name="colorAccentRegistration">#00d2b9</color>
+    <color name="colorRegisterLayoutBackground">#e4e7ee</color>
     <!--TextView-->
-    <color name="colorRegisterTextViewLabel">#FF525252</color>
-    <color name="colorRegisterTextViewBody">#FF525252</color>
-    <color name="colorRegisterTextClickable">#FF1C77FF</color>
+    <color name="colorRegistrationTextViewTitle">#ffffff</color>
+    <color name="colorRegistrationTextViewTitleInverse">#757bc9</color>
     <!--EditText-->
-    <color name="colorRegisterEditTextBackground">#ffffff</color>
-    <color name="colorRegisterEditTextBody">#FF525252</color>
-    <color name="colorRegisterEditTextIcon">#FF525252</color>
-    <color name="colorRegisterEditTextHint">#FF525252</color>
+    <color name="colorRegistrationEditTextBackground">#20f1f5fe</color>
+    <color name="colorRegistrationEditTextText">#757bc9</color>
+    <color name="colorRegistrationEditTextHint">#969595</color>
+    <color name="colorRegistrationEditTextIcon">#00d2b9</color>
     <!--Button-->
-    <color name="colorRegisterButton">#FF696969</color>
-    <color name="colorRegisterButtonDisabled">#FFABABAB</color>
-    <color name="colorRegisterButtonText">#FFFFFF</color>
-    <color name="colorRegisterButtonRipple">#FFFFFF</color>
+    <color name="colorRegistrationButton">#00d2b9</color>
+    <color name="colorRegistrationButtonDisabled">#FFABABAB</color>
+    <color name="colorRegistrationButtonPressed">#00F0D3</color>
+    <color name="colorRegistrationButtonText">#FFFFFF</color>
+    <color name="colorRegistrationButtonTextDisabled">#bdf0f0f0</color>
+    <color name="colorRegistrationButtonTextInverse">#ffffff</color>
+    <!--semiCircleButton-->
+    <color name="colorRegistrationSemiCircleButton">#757ce4</color>
+    <color name="colorRegistrationSemiCircleButtonPressed">#838BFF</color>
 
-    <!--Home-->
-    <color name="colorHomeLayoutBackground">#f8f8f8</color>
-    <color name="colorHomeDivider">#FFABABAB</color>
+    <!--Login-->
+    <color name="colorPrimaryLogin">#FFE3E6ED</color>
+    <color name="colorPrimaryDarkLogin">#FFE3E6ED</color>
+    <color name="colorAccentLogin">#00d2b9</color>
+    <color name="colorLoginLayoutBackground">#FFE3E6ED</color>
     <!--TextView-->
-    <color name="colorHomeTextViewTitle">#FF525252</color>
-    <color name="colorHomeTextViewPrimaryText">#FF525252</color>
-    <color name="colorHomeTextViewSecondaryText">#FF707070</color>
-    <color name="colorHomeQuestionTag">#4C696969</color>
+    <color name="colorLoginTextViewTitle">#757bc9</color>
+    <color name="colorLoginTextViewTitleInverse">#ffffff</color>
     <!--EditText-->
-    <color name="colorHomeEditTextBackground">#ffffff</color>
-    <color name="colorHomeEditTextText">#FF525252</color>
-    <color name="colorHomeEditTextIcon">#FF525252</color>
-    <color name="colorHomeEditTextHint">#FFABABAB</color>
+    <color name="colorLoginEditTextBackground">#ffffff</color>
+    <color name="colorLoginEditTextText">#757bc9</color>
+    <color name="colorLoginEditTextHint">#969595</color>
+    <color name="colorLoginEditTextIcon">#00d2b9</color>
+    <!--Button-->
+    <color name="colorLoginButton">#00d2b9</color>
+    <color name="colorLoginButtonDisabled">#FFABABAB</color>
+    <color name="colorLoginButtonPressed">#00F0D3</color>
+    <color name="colorLoginButtonText">#FFFFFF</color>
+    <color name="colorLoginButtonTextDisabled">#bdf0f0f0</color>
+    <color name="colorLoginButtonTextInverse">#757bc9</color>
+    <!--semiCircleButton-->
+    <color name="colorLoginSemiCircleButton">#757ce4</color>
+    <color name="colorLoginSemiCircleButtonPressed">#838BFF</color>
 </resources>
